--- a/pages/api.html
+++ b/pages/api.html
@@ -6,13 +6,13 @@
 		<div class="row">
           <div class="col-lg-12">
 			
-			<h4>API що підтримуються</h4>
+			<h4>API links</h4>
 			
 			<ul>
-				<li><strong><a href="/q/hashrate">hashrate</a></strong> &ndash; поточний розрахунковий хешрейт мережі</li>
-				<li><strong><a href="/q/height">height</a></strong> &ndash; поточна висота блокчейну (включно з генезис-блоком)</li>
-				<li><strong><a href="/q/reward">reward</a></strong> &ndash; поточна винагорода за блок</li>
-				<li><strong><a href="/q/supply">supply</a></strong> &ndash; поточна емісія</li>
+				<li><strong><a href="/q/hashrate">hashrate</a></strong> &ndash; NET Hashrate</li>
+				<li><strong><a href="/q/height">height</a></strong> &ndash; Block Height</li>
+				<li><strong><a href="/q/reward">reward</a></strong> &ndash; Block reward</li>
+				<li><strong><a href="/q/supply">supply</a></strong> &ndash; Emission</li>
 			</ul>
 
 			
