--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="icon" type="image/icon" href="favicon.ico" >
-    <title>TurtleCoin (&#1180;) Blockchain Explorer</title>
+    <title>TurtleCoin  Blockchain Explorer</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
@@ -276,7 +276,7 @@
     days: function(value) { return numpf(value, "%d day", "%d day", "%d days"); },
     month: "month",
     months: function(value) { return numpf(value, "%d month", "%d month", "%d months"); },
-    year:y "year",
+    year: "year",
     years: function(value) { return numpf(value, "%d year", "%d year", "%d years"); }
   };
 })();
@@ -301,7 +301,7 @@ function hex2a(hexx) {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="/"><span id="coinIcon">&#1180;</span>TurtleCoin</a>
+            <a class="navbar-brand " href="/"></span>TurtleCoin</a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 		
